force-app/main/default/objects/EYI_Booking__c/fields/EYI_Select_Bank_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Select_Bank_GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Bank GL Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.EYI_Project_Name__c</field>
            <operation>equals</operation>
            <valueField>EYI_Bank_GL_Codes__c.EYI_Project__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EYI_Bank_GL_Codes__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>