force-app/main/default/objects/EYI_Booking__c/fields/EYI_Self_banking_for_VA01__c.field-meta.xml
<CustomField>
    <fullName>EYI_Self_banking_for_VA01__c</fullName>
    <description>Inhouse/Self Banking For VA01/VA02</description>
    <label>Self banking for VA01</label>
    <length>20</length>
    <type>Text</type>
</CustomField>