force-app/main/default/objects/EYI_Booking__c/fields/EYI_Site_Head__c.field-meta.xml
<CustomField>
    <fullName>EYI_Site_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Head</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Site Head Commercial</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Site Head Residential</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>