force-app/main/default/objects/EYI_Booking__c/fields/EYI_Site_Head_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Site_Head_Approval_Date__c</fullName>
    <label>Site Head Approval Date</label>
    <type>Date</type>
</CustomField>