force-app/main/default/objects/EYI_Booking__c/fields/EYI_Source_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>EYI_Source_of_Booking__c</fullName>
    <label>Source of Booking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>CRM Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>