force-app/main/default/objects/EYI_Booking__c/fields/EYI_Source_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>EYI_Source_of_Funding__c</fullName>
    <label>Source of Funding</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Current property sale</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>