force-app/main/default/objects/EYI_Booking__c/fields/EYI_Sourcing_manager__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sourcing_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>