force-app/main/default/objects/EYI_Booking__c/fields/EYI_Stage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Boarding</fullName>
            </value>
            <value>
                <fullName>Pre-Registration</fullName>
            </value>
            <value>
                <fullName>Post On Boarding</fullName>
            </value>
            <value>
                <fullName>Post Registration Cancellation (by customer)</fullName>
            </value>
            <value>
                <fullName>Post Registration Cancellation (by self-funded)</fullName>
            </value>
            <value>
                <fullName>Post Registration Cancellation (by bank-funded)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>