force-app/main/default/objects/EYI_Booking__c/fields/EYI_Stamp_Duty_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>EYI_Stamp_Duty_Amount_Received__c</fullName>
    <label>Stamp Duty Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>