force-app/main/default/objects/EYI_Booking__c/fields/EYI_Stamp_Duty_Amount_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Stamp_Duty_Amount_Received_Date__c</fullName>
    <label>Stamp Duty Amount Received Date</label>
    <type>Date</type>
</CustomField>