force-app/main/default/objects/EYI_Booking__c/fields/EYI_Stamp_Duty_Challan_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Stamp_Duty_Challan_Date__c</fullName>
    <label>Stamp Duty Challan Date</label>
    <type>Date</type>
</CustomField>