force-app/main/default/objects/EYI_Booking__c/fields/EYI_Tab_D_Rate_of_Intrest__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tab_D_Rate_of_Intrest__c</fullName>
    <description>Tab D Rate of Intrest</description>
    <label>Tab D Rate of Intrest</label>
    <length>20</length>
    <type>Text</type>
</CustomField>