force-app/main/default/objects/EYI_Booking__c/fields/EYI_Tax_classification__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tax_classification__c</fullName>
    <label>Tax classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taxable GST(MHADA)</fullName>
            </value>
            <value>
                <fullName>Taxable Under GST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>