force-app/main/default/objects/EYI_Booking__c/fields/EYI_Third_Reminder_letter_sent_date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Third_Reminder_letter_sent_date__c</fullName>
    <label>Third Reminder letter sent date</label>
    <type>Date</type>
</CustomField>