force-app/main/default/objects/EYI_Booking__c/fields/EYI_Total_Advance_Booking_Amt_received__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Advance_Booking_Amt_received__c</fullName>
    <label>Total Advance Booking Amount received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>