force-app/main/default/objects/EYI_Booking__c/fields/EYI_Total_Advance_Booking_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Advance_Booking_Net_Amount__c</fullName>
    <label>Total Advannce Booking Net Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>