force-app/main/default/objects/EYI_Booking__c/fields/EYI_Total_amount_Received__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_amount_Received__c</fullName>
    <label>Total amount Received</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>