force-app/main/default/objects/EYI_Booking__c/fields/EYI_Total_SD_Amount_Recevied__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_SD_Amount_Recevied__c</fullName>
    <label>Total SD Amount Recevied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>