force-app/main/default/objects/EYI_Booking__c/fields/EYI_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Transaction_Number__c</fullName>
    <label>Advance Booking Transaction Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>