force-app/main/default/objects/EYI_Booking__c/fields/EYI_Transfer_Swapping_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EYI_Transfer_Swapping_Remarks__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Transfer/ Swapping Remarks</label>
    <length>40</length>
    <type>Text</type>
</CustomField>