force-app/main/default/objects/EYI_Booking__c/fields/EYI_Unit_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Unit</label>
    <referenceTo>EYI_Project_Unit__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>