force-app/main/default/objects/EYI_Booking__c/fields/EYI_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_Number__c</fullName>
    <label>Unit Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>