force-app/main/default/objects/EYI_Booking__c/fields/EYI_Unit_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_SAP_Code__c</fullName>
    <formula>EYI_Unit_No__r.EYI_Unit_SAP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EYI_Unit SAP Code</label>
    <type>Text</type>
</CustomField>