force-app/main/default/objects/EYI_Booking__c/fields/GSTPercentageApplied__c.field-meta.xml
<CustomField>
    <fullName>GSTPercentageApplied__c</fullName>
    <label>GSTPercentageApplied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>