force-app/main/default/objects/EYI_Booking__c/fields/IsAdvancePaymentApproved__c.field-meta.xml
<CustomField>
    <fullName>IsAdvancePaymentApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAdvancePaymentApproved</label>
    <type>Checkbox</type>
</CustomField>