force-app/main/default/objects/EYI_Booking__c/fields/Legacy_System_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System_Created_Date__c</fullName>
    <label>Legacy System Created Date</label>
    <type>Date</type>
</CustomField>