force-app/main/default/objects/EYI_Booking__c/fields/Mandate_Booking__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Booking__c</fullName>
    <label>Mandate Booking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>