force-app/main/default/objects/EYI_Booking__c/fields/Mandate_CP__c.field-meta.xml
<CustomField>
    <fullName>Mandate_CP__c</fullName>
    <label>Mandate CP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>