force-app/main/default/objects/EYI_Booking__c/fields/Number_of_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Applicants__c</fullName>
    <label>Number of Applicants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>