force-app/main/default/objects/EYI_Booking__c/fields/Re_enter_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Re_enter_Account_Number__c</fullName>
    <label>Re-enter Account Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>