force-app/main/default/objects/EYI_Booking__c/fields/Reason_for_Booking_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Booking_Cancellation__c</fullName>
    <label>Reason for Booking Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dropped the plan</fullName>
            </value>
            <value>
                <fullName>Developer Reputation</fullName>
            </value>
            <value>
                <fullName>No Value for money</fullName>
            </value>
            <value>
                <fullName>Carpet area</fullName>
            </value>
            <value>
                <fullName>Flat Layout not suitable</fullName>
            </value>
            <value>
                <fullName>Non Vaastu Compliant</fullName>
            </value>
            <value>
                <fullName>View from apartment</fullName>
            </value>
            <value>
                <fullName>Low Budget</fullName>
            </value>
            <value>
                <fullName>Payment schedule</fullName>
            </value>
            <value>
                <fullName>Possession status</fullName>
            </value>
            <value>
                <fullName>Location not suitable</fullName>
            </value>
            <value>
                <fullName>Financial issue</fullName>
            </value>
            <value>
                <fullName>Loan eligibility issue</fullName>
            </value>
            <value>
                <fullName>Unable to sell existing property</fullName>
            </value>
            <value>
                <fullName>Personal issue</fullName>
            </value>
            <value>
                <fullName>Promised rate changed</fullName>
            </value>
            <value>
                <fullName>Launch delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>