force-app/main/default/objects/EYI_Booking__c/fields/Relationship_Manager_Assignment_Time__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager_Assignment_Time__c</fullName>
    <label>Relationship Manager Assignment Time</label>
    <type>DateTime</type>
</CustomField>