force-app/main/default/objects/EYI_Booking__c/fields/RM_Head__c.field-meta.xml
<CustomField>
    <fullName>RM_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings5</relationshipName>
    <type>Lookup</type>
</CustomField>