force-app/main/default/objects/EYI_Booking__c/fields/RM_Head_Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>RM_Head_Escalation_Date__c</fullName>
    <label>RM Head Escalation Date</label>
    <type>Date</type>
</CustomField>