force-app/main/default/objects/EYI_Booking__c/fields/RM_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>RM_Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings4</relationshipName>
    <type>Lookup</type>
</CustomField>