force-app/main/default/objects/EYI_Booking__c/fields/SAP_customer_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_customer_Code__c</fullName>
    <externalId>true</externalId>
    <label>SAP customer Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>