force-app/main/default/objects/EYI_Booking__c/fields/Transfer_Swapping_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Swapping_Date__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Transfer/Swapping Date</label>
    <type>Date</type>
</CustomField>