force-app/main/default/objects/EYI_Booking__c/fields/X1st_Level_Booking_Checklist_Esc_Send__c.field-meta.xml
<CustomField>
    <fullName>X1st_Level_Booking_Checklist_Esc_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st Level Booking Checklist Esc Send</label>
    <type>Checkbox</type>
</CustomField>