force-app/main/default/objects/EYI_Booking__c/fields/X2nd_level_booking_checklist_Esc_send__c.field-meta.xml
<CustomField>
    <fullName>X2nd_level_booking_checklist_Esc_send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2nd Level Booking Checklist Esc Send</label>
    <type>Checkbox</type>
</CustomField>