force-app/main/default/objects/EYI_Booking__c/validationRules/If_RERA_Is_Not_Applicable.validationRule-meta.xml
<ValidationRule>
    <fullName>If_RERA_Is_Not_Applicable</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(Inventory__r.EYI_RERA_Applicable__c  = false,EYI_Booking_Amount_Received__c &lt;= ( EYI_Agreement_Value__c * 0.96)) , true,    false)</errorConditionFormula>
    <errorDisplayField>EYI_Booking_Amount_Received__c</errorDisplayField>
    <errorMessage>Booking amount should not be greater than 96 per of agreement value</errorMessage>
</ValidationRule>