force-app/main/default/objects/EYI_Booking__c/validationRules/Minimum_Booking_Amount_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Booking_Amount_Received</fullName>
    <active>false</active>
    <errorConditionFormula>AND( EYI_IsAutomationBypassed__c = false,EYI_Booking_Amount_Received__c &lt;   (( EYI_Quote__r.EYI_Agreement_Value__c * EYI_Project_Name__r.EYI_Minimum_Booking_Amt__c )/100))</errorConditionFormula>
    <errorMessage>Booking amount meets the minimum required booking amount before processing the booking</errorMessage>
</ValidationRule>