force-app/main/default/objects/EYI_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Opportunity_Name__c</columns>
    <columns>EYI_Project_Name__c</columns>
    <columns>EYI_Sourcing_manager__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>